(PC-29620)[PRO] style: Make the activuty url inptu responsive and make sure the icon button stays next to the input on smaller screens.

--- a/pro/src/screens/OfferEducational/OfferEducationalForm/FormNotifications/EmailInputRow/EmailInputRow.module.scss
+++ b/pro/src/screens/OfferEducational/OfferEducationalForm/FormNotifications/EmailInputRow/EmailInputRow.module.scss
@@ -5,6 +5,9 @@
 
 .notification-mail {
   position: relative;
+  display: flex;
+  flex-wrap: nowrap;
+  gap: rem.torem(8px);
 
   &-input {
     width: 90%;
